# ballBalancing

./: .gitignore  README.md  build.sh
.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/tum_ics_lacquey_gripper_driver/: .catkin  setup.sh
devel/.private/tum_ics_lacquey_gripper_driver/lib/pkgconfig/: tum_ics_lacquey_gripper_driver.pc
devel/.private/tum_ics_lacquey_gripper_driver/lib/tum_ics_lacquey_gripper_driver/: lacquey_gripper_driver
devel/.private/tum_ics_lacquey_gripper_msgs/: .catkin  local_setup.sh
devel/.private/tum_ics_lacquey_gripper_msgs/lib/pkgconfig/: tum_ics_lacquey_gripper_msgs.pc
devel/.private/tum_ics_schunk_netbox/: .catkin  .rosinstall  setup.sh
devel/.private/tum_ics_schunk_netbox/lib/pkgconfig/: tum_ics_schunk_netbox.pc
devel/.private/tum_ics_schunk_netbox/lib/tum_ics_schunk_netbox/: minimal_node
devel/.private/tum_ics_ur10_bringup/: .catkin  local_setup.sh  setup.sh
devel/.private/tum_ics_ur10_bringup/lib/pkgconfig/: tum_ics_ur10_bringup.pc
devel/.private/tum_ics_ur10_controller_tutorial/: .catkin  setup.sh
devel/.private/tum_ics_ur10_controller_tutorial/lib/pkgconfig/: tum_ics_ur10_controller_tutorial.pc
devel/.private/tum_ics_ur10_controller_tutorial/lib/tum_ics_ur10_controller_tutorial/: simple_effort_controller_node
devel/.private/tum_ics_ur10_description/: .catkin  .rosinstall  local_setup.sh
devel/.private/tum_ics_ur10_description/lib/pkgconfig/: tum_ics_ur10_description.pc
devel/include/tum_ics_lacquey_gripper_msgs/: GripperState.h  getGripperState.h  getGripperStateRequest.h  getGripperStateResponse.h  setGripperState.h  setGripperStateRequest.h  setGripperStateResponse.h
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  tum_ics_lacquey_gripper_driver.pc  tum_ics_lacquey_gripper_msgs.pc  tum_ics_schunk_netbox.pc  tum_ics_ur10_bringup.pc  tum_ics_ur10_controller_tutorial.pc  tum_ics_ur10_description.pc
devel/lib/tum_ics_lacquey_gripper_driver/: lacquey_gripper_driver
devel/lib/tum_ics_schunk_netbox/: minimal_node
devel/lib/tum_ics_ur10_controller_tutorial/: simple_effort_controller_node
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/tum_ics_lacquey_gripper_driver/cmake/: tum_ics_lacquey_gripper_driverConfig-version.cmake  tum_ics_lacquey_gripper_driverConfig.cmake
devel/share/tum_ics_lacquey_gripper_msgs/cmake/: tum_ics_lacquey_gripper_msgs-msg-extras.cmake  tum_ics_lacquey_gripper_msgs-msg-paths.cmake  tum_ics_lacquey_gripper_msgsConfig-version.cmake  tum_ics_lacquey_gripper_msgsConfig.cmake
devel/share/tum_ics_schunk_netbox/cmake/: tum_ics_schunk_netboxConfig-version.cmake  tum_ics_schunk_netboxConfig.cmake
devel/share/tum_ics_ur10_bringup/cmake/: tum_ics_ur10_bringupConfig-version.cmake  tum_ics_ur10_bringupConfig.cmake
devel/share/tum_ics_ur10_controller_tutorial/cmake/: tum_ics_ur10_controller_tutorialConfig-version.cmake  tum_ics_ur10_controller_tutorialConfig.cmake
devel/share/tum_ics_ur10_description/cmake/: tum_ics_ur10_descriptionConfig-version.cmake  tum_ics_ur10_descriptionConfig.cmake
logs/tum_ics_schunk_netbox/: build.make.000.log.stderr
src/ball_blob_detector/: CMakeLists.txt  README.md  package.xml
src/ball_blob_detector/include/ball_blob_detector/: ball_blob_detector.h
src/ball_blob_detector/msg/: PosVel2D.msg
src/ball_blob_detector/src/: ArUcoGenerator.cpp  ArUcoInit.cpp  ball_blob_detector.cpp  camera_test.cpp
src/ball_blob_detector/src/applications/: ball_blob_detector_node.cpp
src/ball_controller/: CMakeLists.txt  package.xml  setup.py
src/ball_controller/configs/: ball_controller.yaml  ball_model.yaml  kalman_filter.yaml  kalman_filter_2.yaml  kalman_filter_ca.yaml  kalman_filter_cv.yaml
src/ball_controller/data/: position.bag  position.csv
src/ball_controller/include/ball_controller/: ball_controller.h  ball_model.h  ball_traj_planner.h  kalman_filter.h  kalman_filter_ca.h  kalman_filter_cv.h
src/ball_controller/launch/: ball_controller.launch  kalman_filter.launch  kalman_filter_ca.launch  kalman_filter_cv.launch  kalman_filter_with_camera.launch  ur10_effort_controller.launch
src/ball_controller/msg/: PosVel2D.msg
src/ball_controller/scripts/: ball_position_recorder.py
src/ball_controller/src/: ball_controller.cpp  ball_model.cpp  ball_traj_planner.cpp  kalman_filter.cpp  kalman_filter_ca.cpp  kalman_filter_cv.cpp
src/ball_controller/src/applications/: ball_controller_test.cpp  ball_model_test.cpp  kalman_filter_ca_test.cpp  kalman_filter_cv_test.cpp  kalman_filter_test.cpp  kalman_filter_test_with_camera.cpp
src/tum_ics_lacquey_gripper/tum_ics_lacquey_gripper_driver/: CMakeLists.txt
src/tum_ics_ur10_controller_tutorial/: CMakeLists.txt
src/tum_ics_ur10_controller_tutorial/include/tum_ics_ur10_controller_tutorial/: UR10Model.h  simple_effort_controller.h
src/tum_ics_ur10_controller_tutorial/launch/configs/: configUR10.ini  simpleEffortCtrl.yaml
src/tum_ics_ur10_controller_tutorial/src/: UR10Model.cpp  UR10Regressor.cpp  simple_effort_controller.cpp
src/ur10_controller/: CMakeLists.txt  package.xml
src/ur10_controller/include/ur10_controller/: UR10Model.h  state_action.h  ur10_effort_controller.h
src/ur10_controller/launch/: simple_effort_controller.launch  ur10_effort_controller.launch
src/ur10_controller/launch/configs/: configUR10.ini  simpleEffortCtrl.yaml  ur10EffortCtrl.yaml
src/ur10_controller/src/: UR10Model.cpp  UR10Regressor.cpp  ur10_effort_controller.cpp
src/ur10_controller/src/applications/: ur10_effort_controller_node.cpp
src/ur_10_model_matlab/: AnalyseUR10.m  Jdot.m  RotX.m  RotY.m  RotZ.m  UR10ModelRef.mat  UR10model.mat  forward_kinematics.m  kalman_Q.m  lqr.m  relativeTrans.m  test.m
(+37 files in other folders)
